Eliminate all Java deprecation warnings
- Replace new URL(String) with URI.create(String).toURL() (deprecated since Java 20)
  in MoquiStart, MClassLoader, UrlResourceReference (10 call sites)
- Update catch blocks to handle IllegalArgumentException from URI.create()
  in addition to MalformedURLException from toURL()
- Replace deprecated InputStreamRequestContent(String, InputStream) with
  the non-deprecated 3-arg constructor using ByteBufferPool.Sized(null)
  in RestClient
- Add java.net.URI import to MoquiStart, MClassLoader, UrlResourceReference
- Add org.eclipse.jetty.io.ByteBufferPool import to RestClient

Build result: zero deprecation warnings (previously 10).