@@ -21,6 +21,7 @@ import java.io.InputStream;
 import java.lang.reflect.Array;
 import java.lang.reflect.Method;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -746,10 +747,10 @@ public class MoquiStart {
                     try {
                         URL jarLocation = jarLocationByJarName.get(jarFile.getName());
                         if (jarLocation == null) jarLocation = new File(jarFile.getName()).toURI().toURL();
-                        URL resourceUrl = new URL("jar:" + jarLocation.toExternalForm() + "!/" + jarEntry.getName());
+                        URL resourceUrl = URI.create("jar:" + jarLocation.toExternalForm() + "!/" + jarEntry.getName()).toURL();
                         resourceCache.put(resourceName, resourceUrl);
                         return resourceUrl;
-                    } catch (MalformedURLException e) {
+                    } catch (MalformedURLException | IllegalArgumentException e) {
                         System.out.println("Error making URL for [" + resourceName + "] in jar [" + jarFile + "] in war file [" + wrapperUrl + "]: " + e.toString());
                     }
                 }
@@ -773,8 +774,8 @@ public class MoquiStart {
                     try {
                         URL jarLocation = jarLocationByJarName.get(jarFile.getName());
                         if (jarLocation == null) jarLocation = new File(jarFile.getName()).toURI().toURL();
-                        urlList.add(new URL("jar:" + jarLocation.toExternalForm() + "!/" + jarEntry.getName()));
-                    } catch (MalformedURLException e) {
+                        urlList.add(URI.create("jar:" + jarLocation.toExternalForm() + "!/" + jarEntry.getName()).toURL());
+                    } catch (MalformedURLException | IllegalArgumentException e) {
                         System.out.println("Error making URL for [" + resourceName + "] in jar [" + jarFile + "] in war file [" + wrapperUrl + "]: " + e.toString());
                     }
                 }
@@ -872,8 +873,8 @@ public class MoquiStart {
             String seal = mf.getMainAttributes().getValue(Attributes.Name.SEALED);
             if (seal == null) return null;
             try {
-                return new URL(seal);
-            } catch (MalformedURLException e) {
+                return URI.create(seal).toURL();
+            } catch (MalformedURLException | IllegalArgumentException e) {
                 return null;
             }
         }
